--- a/src/om.html
+++ b/src/om.html
@@ -7,6 +7,28 @@
     <title>Lundefuld.dk - plakater</title>
   </head>
   <body>
+    <div class="m-scroll bg-black">
+      <div class="m-scroll__title flex gap-10">
+        <div class="m-scroll__title_2">
+          <h1 class="font-semibold uppercase h1 flex"> Få 20% på dit første køb, når du tilmelder dig.</h1>
+      </div>
+      <div class="m-scroll__title_2">
+        <h1 class="font-semibold uppercase h1 flex"> Få 20% på dit første køb, når du tilmelder dig.</h1>
+    </div>
+    <div class="m-scroll__title_2">
+      <h1 class="font-semibold uppercase h1 flex"> Få 20% på dit første køb, når du tilmelder dig.</h1>
+  </div>
+  <div class="m-scroll__title_2">
+    <h1 class="font-semibold uppercase h1 flex"> Få 20% på dit første køb, når du tilmelder dig.</h1>
+</div>
+<div class="m-scroll__title_2">
+  <h1 class="font-semibold uppercase h1 flex"> Få 20% på dit første køb, når du tilmelder dig.</h1>
+</div>
+<div class="m-scroll__title_2">
+<h1 class="font-semibold uppercase h1 flex"> Få 20% på dit første køb, når du tilmelder dig.</h1>
+</div>
+    </div>
+  </div>
 
   <!-- Navigation -->
   <div class="">
@@ -41,17 +63,19 @@
         <!-- For md screen size -->
 
         <!-- For large screens -->
-        <div class=" bg-gray-50 px-6 py-9">
-          <div class="container mx-auto flex items-center justify-between">
-            <h1 class="md:w-2/12 cursor-pointer text-gray-800 " aria-label="lunefuld.dk">
-              <a href="index.html" class="font-extrabold">
-                <img class="min-h-[50px]" src="content/lunefuld.svg" alt="logo">
-              </a>
-            </h1>
-            <ul class="hidden w-8/12 md:flex items-center justify-center space-x-8">
+
+        <!-- For large screens -->
+        <div class=" bg-transparent  px-2 py-4  border-b-2 border-solid border-black hover:bg-black hover:bg-opacity-5">
+          <div class="container  mx-auto flex items-center justify-between">
+            <ul class="hidden w-8/12 md:flex items-center justify-start pl-2 space-x-8">
+              <li>
+                <a href="index.html" class="font-extrabold">
+                  <img class="h-[30px]" src="content/lunefuld.svg" alt="logo">
+                </a>
+              </li>
               <li>
               <a href="shop.html"
-                class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Shop/Plakater</a>
+                class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Shop</a>
               </li>
               <li>
                 <a href="#"
@@ -74,7 +98,7 @@
                     src="https://tuk-cdn.s3.amazonaws.com/can-uploader/navigation-I-svg2dark.svg" alt="search">
                 </button>
                 <input id="searchInput" type="text" placeholder="Søg"
-                  class="hidden text-sm   text-gray-600 rounded ml-1 border border-transparent focus:outline-none focus:border-gray-400 px-1" />
+                  class=" text-sm   text-gray-600 rounded ml-1 border border-transparent focus:outline-none focus:border-gray-400 px-1" />
               </div>
               <div class="hidden lg:flex items-center space-x-4 xl:space-x-8">
                 <button aria-label="view favourites"
@@ -112,6 +136,7 @@
             </div>
           </div>
         </div>
+      
         <!-- For small screen -->
         <div id="mobile-menu" class="hidden absolute  z-10 inset-0 md:hidden bg-white flex flex-col h-screen w-full">
           <div class="flex items-center justify-between border-b border-gray-200  pb-4 p-4">
@@ -339,6 +364,8 @@
             class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">FAQ</a>
           <a href="javascript:void(0)"
             class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Handelsbetingelser</a>
+            <a href="javascript:void(0)"
+            class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Privatlivspolitik</a>
         </div>
         <div class="lg:block hidden">
           <label class="text-xl font-medium leading-5  text-white">Hold dig opdateret!</label>
