hjælp jeg mangler stadig en hero

--- a/src/index.html
+++ b/src/index.html
@@ -280,58 +280,59 @@
 
 
 
-<div class="flex flex-col justify-evenly  sm:invisible md:visible md:flex-row row-gap8">
+<div class="flex flex-col justify-evenly  sm:invisible md:visible md:flex-row row-gap8 p-8">
    
-  <a class="flex flex-col flex-nowrap p-8  w-1/3" href="#">
+  <a class="flex flex-col flex-nowrap p8 w-1/3  " href="#">
     <div class="relative img">
-      <img class=""  src="./content/posters/poster-4.jpg" alt="poster">
+      <img class=""  src="./content/frontpageimg/wallart.jpeg" alt="poster">
       <div class="overlay"></div></div>
-    <h1 class="text-2xl font-semibold font-serif">Samarbejde med psykiatrifonden</h1>
-    <p>Lunefuld blev stiftet af Marie Moldova efter en stor krise i hendes liv - og kan relatere til, ikke at have det godt altid. Med dette samarbejde ønsker hun, at støtte op om andre, som har haft en svær tid.</p>
-   <p class="underline underline-offset-2 uppercase font-bold text-base">Læs mere om samarbejdet</p>
+    <h1 class="text-2xl  heading1">Gallery Wall</h1>
+    <p>Find inspiration til sammensætninger af din nye gallerivæg på vores inspirationsside</p>
+   <p class="underline underline-offset-2 uppercase font-semibold pt-2 text-base">Bliv inspireret</p>
   </a>
 
-<a class="flex flex-col flex-nowrap p-8  w-1/3" href="./shop.html">
+
+<a class="flex flex-col flex-nowrap p8 w-1/3" href="./shop.html">
   <div class="relative img">
-    <img class=""  src="./content/posters/poster-4.jpg" alt="poster">
+    <img class=""  src="./content/frontpageimg/image00001.jpeg" alt="poster">
     <div class="overlay"></div></div>
-  <h1 class="text-2xl font-semibold font-serif"> Populære print</h1>
+  <h1 class="text-2xl heading1"> Populære print</h1>
   <p>Udforsk vores nuværende best-sellers, og biv inspireret til din egen plakatvæg</p>
- <p class="underline underline-offset-2 uppercase font-bold text-base">udforsk</p>
+ <p class="underline underline-offset-2 uppercase font-semibold pt-2 text-base">udforsk</p>
 </a>
 </div>
 
 
 <!--Kategorier-->
 
-<div class="flex flex-col  md:flex-row gap-8">
+<div class="flex flex-col  md:flex-row gap-8 pb-8">
 
   <a class="flex flex-col flex-nowrap ml-8  w-1/3 " href="#">
     <div class="relative img">
-      <img class=""  src="./content/posters/poster-4.jpg" alt="poster">
+      <img class=""  src="./content/frontpageimg/psykiatrifonden.jpeg" alt="poster">
       <div class="overlay"></div></div>
-    <h1 class="text-2xl font-semibold font-serif">Samarbejde med psykiatrifonden</h1>
+    <h1 class="text-2xl heading1">Samarbejde med psykiatrifonden</h1>
     <p>Lunefuld blev stiftet af Marie Moldova efter en stor krise i hendes liv - og kan relatere til, ikke at have det godt altid. Med dette samarbejde ønsker hun, at støtte op om andre, som har haft en svær tid. </p>
-   <p class="underline underline-offset-2 uppercase font-bold text-base">Læs mere om samarbejdet</p>
+   <p class="underline underline-offset-2 uppercase font-semibold pt-2 text-base">Læs mere om samarbejdet</p>
   </a>
 
   <a class="flex flex-col flex-nowrap   w-1/3  " href="#">
     <div class="relative img">
-      <img class=""  src="./content/posters/poster-4.jpg" alt="poster">
+      <img class=""  src="./content/frontpageimg/wallart.jpeg" alt="poster">
       <div class="overlay"></div></div>
-    <h1 class="text-2xl font-semibold font-serif">Gallery Wall</h1>
+    <h1 class="text-2xl heading1">Gallery Wall</h1>
     <p>Find inspiration til sammensætninger af din nye gallerivæg på vores inspirationsside</p>
-   <p class="underline underline-offset-2 uppercase font-bold text-base">Bliv inspireret</p>
+   <p class="underline underline-offset-2 uppercase font-semibold pt-2 text-base">Bliv inspireret</p>
   </a>
 
 
 <a class="flex flex-col flex-nowrap mr-8 w-1/3" href="./kunstnere.html">
   <div class="relative img">
-    <img class=""  src="./content/posters/poster-4.jpg" alt="poster">
+    <img class=""  src="./content/frontpageimg/fotograf.jpeg" alt="poster">
     <div class="overlay"></div></div>
-  <h1 class="text-2xl font-semibold font-serif">Mød vores kunstnere</h1>
+  <h1 class="text-2xl heading1">Mød vores kunstnere</h1>
   <p>Læs om de forskellige historier bag kunstværkerne.</p>
- <p class="underline underline-offset-2 uppercase font-bold text-base">Mød kunstnerne</p>
+ <p class="underline underline-offset-2 uppercase font-semibold pt-2 text-base">Mød kunstnerne</p>
 </a>
 
 
