--- a/src/produkt.html
+++ b/src/produkt.html
@@ -886,7 +886,7 @@
 
     <!--Andre købte også-->
 
-    <h1 class="font-bol text-center text-4xl">Andre købte også</h1>
+    <h1 class="font-semibold text-center text-4xl mb-8 heading1">Andre købte også</h1>
 
     <div class="flex flex-col gap-8 md:flex-row">
       <a class="relative ml-8 flex flex-col flex-nowrap" href="./produkt.html">
@@ -894,47 +894,47 @@
           <img class="" src="./content/posters/poster-4.jpg" alt="poster" />
           <div class="overlay"></div>
         </div>
-        <h1 class="font-serif text-2xl font-semibold">
-          Samarbejde med psykiatrifonden
+        <h1 class="text-2xl  heading1">
+         Morgenfrost
         </h1>
-        <p>Pierre Magritte</p>
-        <p class="text-base font-bold uppercase underline underline-offset-2">
+        <p>Pieter MacLaine</p>
+        <p class="underline underline-offset-2 uppercase font-semibold pt-2 text-base">
           Se mere
         </p>
-      </a>
+      </a> 
 
       <a class="flex flex-col flex-nowrap" href="./produkt.html">
         <div class="img relative">
-          <img class="" src="./content/posters/poster-4.jpg" alt="poster" />
+          <img class="" src="./content/posters/poster-2.jpg" alt="poster" />
           <div class="overlay"></div>
         </div>
-        <h1 class="font-serif text-2xl font-semibold">Gallery Wall</h1>
+        <h1 class="text-2xl  heading1">Højbanen</h1>
         <p>Varte Meo</p>
-        <p class="text-base font-bold uppercase underline underline-offset-2">
+        <p class="underline underline-offset-2 uppercase font-semibold pt-2 text-base">
           Se mere
         </p>
       </a>
 
       <a class="flex flex-col flex-nowrap" href="./produkt.html">
         <div class="img relative">
-          <img class="" src="./content/posters/poster-4.jpg" alt="poster" />
+          <img class="" src="./content/posters/poster-24.jpg" alt="poster" />
           <div class="overlay"></div>
         </div>
-        <h1 class="font-serif text-2xl font-semibold">Mød vores kunstnere</h1>
-        <p>Edgar Poe</p>
-        <p class="text-base font-bold uppercase underline underline-offset-2">
+        <h1 class="text-2xl  heading1">Irland</h1>
+        <p>Peter McLean</p>
+        <p class="underline underline-offset-2 uppercase font-semibold pt-2 text-base">
           Se mere
         </p>
       </a>
 
       <a class="mr-8 flex flex-col flex-nowrap" href="./produkt.html">
         <div class="img relative">
-          <img class="" src="./content/posters/poster-4.jpg" alt="poster" />
+          <img class="" src="./content/posters/poster-7.jpg" alt="poster" />
           <div class="overlay"></div>
         </div>
-        <h1 class="font-serif text-2xl font-semibold">Mød vores kunstnere</h1>
-        <p>Edgar Poe</p>
-        <p class="text-base font-bold uppercase underline underline-offset-2">
+        <h1 class="text-2xl  heading1">Belgien</h1>
+        <p>Magritte</p>
+        <p class="underline underline-offset-2 uppercase font-semibold pt-2 text-base">
           Se mere
         </p>
       </a>
@@ -945,11 +945,12 @@
       id="anmeldelser1"
       class="flex justify-center border-b-2 border-solid border-black pt-10"
     >
-      <h1 class="mb-2 text-4xl font-bold">Bedømmelser</h1>
+      <h1 class="mb-2 text-4xl font-semibold mr-8 heading1">Bedømmelser</h1>
     </div>
 
-    <div class="grid grid-cols-2">
-      <div class="mr-8 ml-8 flex flex-col pt-8 pb-2">
+    <div class="flex flex-row gap-14  ">
+
+      <div class="mr-8 ml-8 flex flex-col pt-8 pr-8 pb-2 border-r-2 border-solid border-gray-300">
         <div>
           <p>Gennemsnitlig kundebedømmelse:</p>
           <div class="flex flex-row gap-1">
@@ -976,19 +977,19 @@
           </div>
         </div>
         <p
-          class="mt-6 flex w-72 cursor-pointer items-center bg-black pl-2 pr-2 text-white"
+          class="mt-6 flex w-60 cursor-pointer items-center bg-black pl-2 pr-2 text-white"
         >
           Skriv en anmeldelse
         </p>
       </div>
 
       <div
-        class="mr-8 ml-8 flex flex-col items-center justify-center gap-6 md:flex-col"
+        class="mr-2 ml-8 flex flex-col items-center gap-6   md:flex-col"
       >
-        <div class="flex justify-center gap-8 p-2 pt-6">
+        <div class="flex justify-center gap-8  pt-6">
           <div class="flex flex-col gap-2">
             <div>
-              <h1>Line Vagner</h1>
+              <h1 class="font-semibold">Line Vagner</h1>
             </div>
             <div class="flex flex-row gap-1">
               <iconify-icon
@@ -1014,17 +1015,17 @@
             </div>
           </div>
           <div>
-            <p>
+            <p class="w-96">
               Super flot tryk. Jeg købte tre 70x100 plakater, og papiret er
               dejlig tykt. Tilpas mat, så der ikke er for mange reflektioner.
             </p>
           </div>
         </div>
 
-        <div class="flex justify-center gap-8 border-t-2 border-gray-100 p-2">
+        <div class="flex justify-center gap-8 border-t-2  border-gray-300 p-2">
           <div class="flex flex-col gap-2">
             <div>
-              <h1>Poul Ruth</h1>
+              <h1 class="font-semibold">Poul Ruth</h1>
             </div>
             <div class="flex flex-row gap-1">
               <iconify-icon
@@ -1050,7 +1051,7 @@
             </div>
           </div>
           <div>
-            <p>
+            <p class="w-96">
               Alt gik som forventet - hurtig og korrekt levering. Havde dog
               gerne set at det var lidt billigere:-D
             </p>
@@ -1058,11 +1059,11 @@
         </div>
 
         <div
-          class="flex justify-center gap-8 border-t-2 border-gray-100 p-2 pb-6"
+          class="flex justify-center gap-8 border-t-2 border-gray-300 p-2 pb-6"
         >
           <div class="flex flex-col gap-2">
             <div>
-              <h1>Andrea V.</h1>
+              <h1 class="font-semibold">Andrea V.</h1>
             </div>
             <div class="flex flex-row gap-1">
               <iconify-icon
@@ -1088,7 +1089,7 @@
             </div>
           </div>
           <div>
-            <p>
+            <p class="w-96">
               Jeg har haft en nederen periode, og at se Lunefuld Lykkes plakater
               hjælper mig med - det er rart at vide at jeg ikke er den eneste
               med ar i sjælen. Og så pynter plakaterne flot på væggene:-)
